--- a/JavaScript/Feb19/index.html
+++ b/JavaScript/Feb19/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Task Manager</title>
-<link rel="stylesheet" href="style.css">
+    <title>Advanced Task Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
-    <h2>Task Manager</h2>
- 
-    <input type="text" id="taskInput" placeholder="Enter task">
-<button id="addBtn">Add Task</button>
- 
+
+<div class="container">
+    <h2>Advanced Task Manager</h2>
+
+    <div class="input-section">
+        <input type="text" id="taskInput" placeholder="Enter task">
+        <input type="date" id="dueDateInput">
+        <button id="addBtn">Add</button>
+    </div>
+
+    <div class="filters">
+        <button onclick="setFilter('all')">All</button>
+        <button onclick="setFilter('completed')">Completed</button>
+        <button onclick="setFilter('pending')">Pending</button>
+    </div>
+
     <ul id="taskList"></ul>
- 
-    <script src="basics.js"></script>
+</div>
+
+<script src="basics.js" defer></script>
 </body>
 </html>
